# pandas-as-pd

./: .gitignore  LICENSE  MECH_RESULTS.md  Makefile  README.md  REPRODUCIBILITY.md  alias-inertia_scope.md  pyproject.toml  requirements.txt
configs/: full.yaml  long32k.yaml  smoke.yaml
mech/: requirements-mech.txt
paper/: acl_latex.tex  custom.bib
results/: README.md  candidate_table.json  corpus_freq.json  deepseek_analysis.json  deepseek_ext_analysis.json  deepseek_ext_nrun.jsonl  deepseek_ext_nrun_salience.jsonl  deepseek_manifest.json  deepseek_naturalistic_all_records.jsonl  deepseek_naturalistic_all_results.json  deepseek_naturalistic_records.jsonl  deepseek_naturalistic_results.json  deepseek_raw.jsonl  deepseek_raw_deep1.jsonl  deepseek_raw_deep2.jsonl  dose_measured.json  dose_regression.json  full.parquet  full_analysis.json  full_generations.jsonl  full_manifest.json  full_stimuli_meta.jsonl  long32k.parquet  long32k_manifest.json  long32k_stimuli_meta.jsonl  naturalistic_all_records.jsonl  naturalistic_all_results.json  naturalistic_records.jsonl  naturalistic_results.json  naturalistic_scenarios.json  naturalistic_scenarios_more.json  raw_prior_pull.json
scripts/: analyze.py  analyze_deepseek.py  analyze_deepseek_ext.py  candidate_table.py  corpus_freq.py  dose_measured.py  dose_regression.py  gen_stimuli.py  mech_d5_behavioral.py  mech_m0_validate.py  mech_m1_logitlens.py  mech_m2_patching.py  mech_m3_heads.py  mech_m4_ablate.py  mech_m4_figure.py  mech_paper_figures.py  raw_prior_pull.py  run.py  run_deepseek.py  run_deepseek_naturalistic.py  (+4 more)
(+66 files in other folders)
